hphp/test/zend/good/Zend/tests/bug44141.php.expectf

Fatal error: Call to private method X::__construct() from context 'Y' in %s/bug44141.php on line 15
